Add some devise localization

--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -41,6 +41,8 @@ ru:
       signed_up_but_unconfirmed: "На Ваш адрес электронной почты было отправлено сообщение с инструкциями по подтверждению Вашей учётной записи. Пожалуйста, проследуйте по ссылке из этого письма для активации Вашей учетной записи."
       update_needs_confirmation: "Ваш аккаунт успешно обновлен, но нам необходимо проверить Ваш новый адрес электронной почты. Пожалуйста, проверьте свою электронную почту и проследуйте по ссылке для того чтобы подтвердить ваш адрес электронной почты."
       updated: "Ваша учётная запись успешно обновлена."
+      leave_blank: "оставьте поле пустым, если не хотите изменять"
+      oldpass_to_confirm: "требуется текущий пароль для подтверждения изменений"
     sessions:
       signed_in: "Вход в систему выполнен."
       signed_out: "Выход из системы выполнен."
