--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -40,6 +40,8 @@ en:
       signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please open the link to activate your account."
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and click on the confirm link to finalize confirming your new email address."
       updated: "You updated your account successfully."
+      leave_blank: "leave blank if you don't want to change it"
+      oldpass_to_confirm: "we need your current password to confirm your changes"
     sessions:
       signed_in: "Signed in successfully."
       signed_out: "Signed out successfully."
