--- a/config/locales/sample_blog.ru.yml
+++ b/config/locales/sample_blog.ru.yml
@@ -64,6 +64,7 @@ ru:
     posted_by:                  "Написал"
     submit:                     "Сохранить изменения"
     create:                     "Опубликовать"
+    commented:                  " прокомментировал: "
 
   buttons:
     edit:                       "Редактировать"
