--- a/README.rdoc
+++ b/README.rdoc
@@ -1,30 +1,15 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is my first project on Rails
+In it I am trying to implement a learning things
 
-Things you may want to cover:
+For work, I use the following versions of Ruby and Rails:
 
-* Ruby version
+* Ruby version 2.1.5
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
+* Rails version 4.1.6
 
 * ...
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
-
-save project to bitbucket
+stay tuned :)
