Add article created notice translation

--- a/config/locales/simple_blog.ru.yml
+++ b/config/locales/simple_blog.ru.yml
@@ -87,6 +87,7 @@ ru:
   flashes:
     cant_edit:                  "ВЫ НЕ МОЖЕТЕ ИЗМЕНЯТЬ СТАТЬИ ДРУГИХ АВТОРОВ!"
     cant_delete:                "ВЫ НЕ МОЖЕТЕ УДАЛЯТЬ СТАТЬИ ДРУГИХ АВТОРОВ!"
+    article_created:            "Статья успешно опубликована"
 
   links:
     terms:                      "Условия использования"
